--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Gestage_android</string>
+    <string name="app_name">Gestage</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="authentification">Authentification</string>
+    <string name="login">Nom utilisateur</string>
+    <string name="password">Mot de passe </string>
+    <string name="connexion">Connexion</string>
 
 </resources>
